; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/perf/extr_power8-pmu.c_power8_get_alternatives.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/perf/extr_power8-pmu.c_power8_get_alternatives.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@event_alternatives = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @power8_get_alternatives to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @power8_get_alternatives(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32*, i32** %6, align 8
  %10 = load i32, i32* @event_alternatives, align 4
  %11 = call i32 @ARRAY_SIZE(i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @event_alternatives, align 4
  %14 = call i32 @isa207_get_alternatives(i32 %8, i32* %9, i32 %11, i32 %12, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  ret i32 %15
}

declare dso_local i32 @isa207_get_alternatives(i32, i32*, i32, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
